<resources>
    <string name="app_name">What To Do For Dinner</string>
    <string name="save">Save</string>
    <string name="add_new_dinner">Add new addNewDinner</string>
    <string name="add_new_dinner_name">Name</string>
    <string name="add_new_dinner_duration">Duration</string>
    <string name="add_new_dinner_is_soup">Soup</string>
    <string name="add_new_dinner_name_is_vege">Vege</string>
    <string name="dinner_duration_short">Short</string>
    <string name="dinner_duration_medium">Medium</string>
    <string name="dinner_duration_long">Long</string>
    <string name="cancel">Cancel</string>
    <string name="save_new_dinner_saved_message">Dinner has been saved.</string>
    <string name="action_dinner_list">Dinner list</string>
    <string name="welcome_message_header">Welcome to</string>
    <string name="welcome_message">"What\'s for dinner" is an application that helps choosing dishes for dinner. Prompts are generated from dishes added by the user and based on user\'s history of choices and attributes given to various dishes.</string>
    <string name="welcome_message_header2">What To Do For Dinner</string>
    <string name="welcome_message2">Click the button below for prompts.</string>
    <string name="generate_prompts">Generate</string>
    <string name="seasons">Seasons</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="autumn">Autumn</string>
    <string name="winter">Winter</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="dinner_deleted_message">Dinner deleted</string>
    <string name="add">Add</string>
    <string name="title_activity_dinner_list">Dinner list</string>
    <string name="title_activity_add_new_dinner">Add new dinner</string>
    <string name="update_dinner_saved_message">Dinner updated</string>
    <string name="title_activity_edit_dinner">Edit dinner</string>
    <string name="ok">Ok</string>
    <string name="title_activity_generate_prompts_preferences">Generate promps preferences</string>
    <string name="duration">Duration</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="soup">Soup</string>
    <string name="only_vegetarian">Only vegetarian</string>
    <string name="prefer_vegetarian">Prefer vegetarian</string>
    <string name="doesnt_matter">Does\'nt matter</string>
    <string name="prefer_not_vegetarian">Prefer not vegetarian</string>
    <string name="only_not_vegetarian">Only not vegetarian</string>
    <string name="only_soups">Only soups</string>
    <string name="prefer_soups">Prefer soups</string>
    <string name="prefer_not_soups">Prefer not soups</string>
    <string name="only_not_soups">Only not soups</string>
    <string name="non_of_this">Non of this...</string>
    <string name="title_activity_prompts">Prompts</string>
    <string name="close">Close</string>
    <string name="you_have_chose_dinner">You have chose dinner:</string>
    <string name="congratulations">Congratulations!</string>
    <string name="sorry">Sorry</string>
    <string name="sorry_message">There is no other propositions for You.</string>
    <string name="sorry_message2">Maybe You want to add new dinner to the list.</string>
    <string name="sorry_message_question">What do You want to do?</string>
    <string name="action_about">About</string>
    <string name="what_to_do_for_dinner">What to do for dinner</string>
    <string name="author">Author:</string>
    <string name="title_activity_chosen">Dinner chosen</string>
    <string name="title_activity_empty_prompts">Empty result</string>
    <string name="title_activity_about">About</string>
    <string name="version">Version: %1$s build %2$s</string>
    <string name="add_base">Add base prompts</string>
    <string name="dinners_generated_from_base_prompts">Base prompts has been added.</string>
    <string name="maximum_duration">Maximum duration</string>
    <string name="make_dish_used">Make Dish used</string>
    <string name="dinner">Dinner</string>
    <string name="dinner_date">Dinner date</string>
    <string name="dinner_used_message">Dinner used</string>
    <string name="title_activity_mark_dinner_used">Mark dinner used</string>
</resources>
