<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="biz.golek.whattodofordinner.MainActivity">
    <item
        android:id="@+id/action_make_dish_used"
        android:orderInCategory="80"
        android:icon="@drawable/ic_restaurant_menu"
        android:title="@string/make_dish_used"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_dinner_list"
        android:orderInCategory="90"
        android:title="@string/action_dinner_list"
        android:icon="@drawable/ic_action_list_2_black"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_info"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
