<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="dinner"
            type="biz.golek.whattodofordinner.view.view_models.Dinner" />
    </data>
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="biz.golek.whattodofordinner.view.activities.AddNewDinnerActivity">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:columnCount="2"
            android:rowCount="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_dinner_name"
                android:id="@+id/name_label"
                android:layout_row="0"
                android:layout_column="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@{dinner.name}"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_dinner_duration"
                android:id="@+id/duration_label"
                android:layout_row="1"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_dinner_is_soup"
                android:id="@+id/soup"
                android:layout_row="2"
                android:layout_column="0"
                android:checked="@{dinner.is_soup}"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_dinner_name_is_vege"
                android:id="@+id/vege"
                android:layout_row="3"
                android:layout_column="0"
                android:checked="@{dinner.is_vege}" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_row="1"
                android:layout_column="1"
                />
        </GridLayout>
    </RelativeLayout>
</layout>